--- a/app/views/commit_mailer/notify_import_errors_in_commit_creator.text.erb
+++ b/app/views/commit_mailer/notify_import_errors_in_commit_creator.text.erb
@@ -1,12 +1,16 @@
 An error occurred during we were trying to import your sha: <%= @sha %>.
 
-Project: <%= @project.name %>
+<%= I18n.t("mailer.commit.notify_import_errors_in_commit_creator.not_found_in_repo_message", sha: @sha) if @err.is_a? Git::CommitNotFoundError %>
 
-SHA: <%= @sha %>
+Details of the Error:
 
-Error Class: <%= @err.class %>
-
+Project:       <%= @project.name %>
+SHA:           <%= @sha %>
+Error Class:   <%= @err.class %>
 Error Message: <%= @err.message %>
+
+
+Please email shuttle-engineering@squareup.com for questions.
 
 Sincerely,
 The Shuttle Automated Mailer
