--- a/app/views/commit_mailer/notify_submitter_of_import_errors.text.erb
+++ b/app/views/commit_mailer/notify_submitter_of_import_errors.text.erb
@@ -3,7 +3,7 @@ The following errors occured while we were importing your commit <%= @commit.rev
 SHA: <%= @commit.revision %>
 Link: <%= project_commit_url(@commit.project, @commit) %>
 
-<%= I18n.t("mailer.commit.notify_submitter_of_import_errors.not_found_in_repo_message") if @commit.import_errors.any? {|err_arr| err_arr.first.try(:constantize).try(:<, Git::NotFoundError) } %>
+<%= t("mailer.commit.notify_submitter_of_import_errors.not_found_in_repo_message") if @commit.import_errors.any? {|err_arr| err_arr.first.try(:constantize).try(:<, Git::NotFoundError) } %>
 
 Errors:
 
