Implement git-independence.
Projects don't need to have a repository_url any more, and the rest of the code should respect that.

--- a/app/views/home/_modal_add_translation.slim
+++ b/app/views/home/_modal_add_translation.slim
@@ -2,7 +2,7 @@
   .row
     .modal.twelve.columns#add-translation
       a.close ×
-      - projects = Project.order('LOWER(name) ASC')
+      - projects = Project.with_repository_url.order('LOWER(name) ASC')
       - cur_project = cookies[:home_new_commit_project] ? cookies[:home_new_commit_project] : projects.first
       = form_for(Commit.new, url: project_commits_path(cur_project, format: 'json')) do |f|
         h2 Translation Request
