Adds a download as CSV button and specs for the stats controller

--- a/app/views/stats/index.slim
+++ b/app/views/stats/index.slim
@@ -23,8 +23,9 @@
   true
 
 .header
+  .pull-right
+    button.primary href=stats_url(format: :csv) Download CSV
   h1 Translation Statistics
-
 hr.divider
 
 .row.stats-charts
