Move issue subscription on comment creation logic to the controller.

--- a/app/assets/stylesheets/partials/_issues.css.scss
+++ b/app/assets/stylesheets/partials/_issues.css.scss
@@ -109,4 +109,9 @@ $issue-status-yellow: #E4DB00;
     right: 0px;
     bottom: 0px;
   }
+
+  .unsubscribe-directions {
+    margin-top: 4px;
+    font-size: 12px;
+  }
 }
