--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -25,3 +25,5 @@
   .control-group
       = f.submit value: 'Add', class: 'primary create-comment-button'
       = button_tag 'Cancel', class: "small default cancel-button"
+      .muted.unsubscribe-directions
+        | ( Adding a comment will subscribe you to the issue. You can later unsubscribe by editing the 'Subscribed Emails' field of the issue. )
