--- a/app/views/comments/_index.html.slim
+++ b/app/views/comments/_index.html.slim
@@ -24,5 +24,5 @@
       = render partial: 'comments/show', locals: {comment: comment}
 
   = button_tag 'Write a Comment', class: "small default show-form-button #{'hide' if comment.errors.any?}"
-  div class="form-wrapper loading-overlayable #{'hide' if comment.errors.blank?}"
+  div class="form-wrapper #{'hide' if comment.errors.blank?}"
     = render partial: 'comments/new', locals: { issue: issue, comment: comment }
