Add text descriptors next to locales progress bar since color coding wasn't obvious

--- a/app/views/commits/_layout.slim
+++ b/app/views/commits/_layout.slim
@@ -80,6 +80,7 @@
             dl
               dt class=(required ? (finished ? 'text-success' : 'text-error') : nil)
                 = locale.rfc5646
+                small = " (#{required ? 'required' : 'optional'})"
                 strong = (finished ? '100%' : "#{(@commit.fraction_done(locale) * 100).round(2)}%")
               dd
                 span class=(finished ? 'finished' : 'inprogress') style="width: #{(@commit.fraction_done(locale) * 100).round(2)}%;"
