Add a new issue type descriptor. Make summary and description optional Rearrange issue fields on the UI Rename kind to type only on the UI, not in the backend because type is a reserved word. Improved commit/issues page.
Fixes https://jira.corp.squareup.com/browse/SHUTTLE-397
Fixes https://jira.corp.squareup.com/browse/SHUTTLE-426

--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -73,3 +73,9 @@ hr.divider {
 .hide {
   display: none;
 }
+
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
