Lowercase some text

--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -86,3 +86,7 @@ pre {
 .text-success { color: $input-green }
 .text-info { color: $input-blue }
 .muted { color: $gray3; }
+
+.lowercase {
+  text-transform: lowercase;
+}
