Change issue/comment email wording

--- a/app/views/comment_mailer/comment_created.text.erb
+++ b/app/views/comment_mailer/comment_created.text.erb
@@ -2,7 +2,7 @@
 
 <%= @comment.content %>
 
-View the comment: <%= comment_url(@comment) %>
+View the comment & reply to it at <%= comment_url(@comment) %>
 
 Sincerely,
 The Shuttle Automated Mailer
