--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -23,5 +23,5 @@
   .control-group
       = f.text_area :content
   .control-group
-      = f.submit value: 'Add', class: 'primary create-comment-button'
+      = f.submit value: 'Add Comment', class: 'primary create-comment-button'
       = button_tag 'Cancel', class: "small default cancel-button"
