--- a/app/views/issue_mailer/issue_created.text.erb
+++ b/app/views/issue_mailer/issue_created.text.erb
@@ -8,7 +8,7 @@ Summary: <%= @issue.summary %>
 
 Description: <%= @issue.description %>
 
-View the issue: <%= issue_url(@issue) %>
+View the issue & add a comment at <%= issue_url(@issue) %>
 
 Sincerely,
 The Shuttle Automated Mailer
