Remove more references to cached manifest formats

--- a/app/views/commits/_layout.slim
+++ b/app/views/commits/_layout.slim
@@ -27,7 +27,7 @@
         ]
           | Missing Format
         .tooltip#missing_format_tooltip
-          | You must enable at least one cached format to use this feature
+          | You must set a default manifest format to use this feature
       - else
         button.primary.disabled Translating
   h1
