Add key column in translation search
Fixes https://jira.corp.squareup.com/browse/SHUTTLE-414

--- a/app/assets/stylesheets/pages/search.css.scss
+++ b/app/assets/stylesheets/pages/search.css.scss
@@ -14,6 +14,10 @@ body.search {
   &#search-translations {
     .main > input[type="text"] { width: 535px; }
     .translation-entry { word-break: break-word; }
+    .key {
+      word-break: break-word;
+      width: 150px;
+    }
   }
 
   &#search-keys {
