Add explanation of export settings on the edit project page

--- a/app/views/projects/_form.slim
+++ b/app/views/projects/_form.slim
@@ -148,7 +148,7 @@
               | file using the given filename.  Otherwise, it will default to
               | manifest.[default_file_extension]
       fieldset 
-        legend Precompilation and Caching
+        legend Export Settings
 
         .control-group
           = f.label :default_manifest_format, class: 'control-label'
