Re organize home page partials
Conflicts:
	app/views/home/index.slim

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -36,108 +36,9 @@ hr.divider
 
   table.table.hover-rows#commits 
     thead
-      tr
-        / Project Status
-        th 
-        th Project
-        th SHA
-        / Create Date
-        th
-          - if @sort_order == 'create'
-            - if @direction == 'asc'
-              = link_to request.parameters.merge({sort: 'create', direction: 'desc'}) do
-                | Created &nbsp;
-                i.fa.fa-caret-down
-            - else
-              = link_to request.parameters.merge({sort: 'create', direction: 'asc'}) do
-                | Created &nbsp;
-                i.fa.fa-caret-up
-          - else
-            = link_to 'Created', request.parameters.except(:direction).merge(sort: 'create')
-        / Due Date
-        th
-          - if @sort_order == 'due'
-            - if @direction == 'desc'
-              = link_to request.parameters.merge({sort: 'due', direction: 'asc'}) do
-                | Due Date&nbsp;
-                i.fa.fa-caret-up
-            - else
-              = link_to request.parameters.merge({sort: 'due', direction: 'desc'}) do
-                | Due Date&nbsp;
-                i.fa.fa-caret-down
-          - else
-            = link_to 'Due Date', request.parameters.except(:direction).merge(sort: 'due')
-        / Priority
-        th
-          - if @sort_order == 'priority' || @sort_order.nil?
-            - if @direction == 'desc'
-              = link_to request.parameters.merge({sort: 'priority', direction: 'asc'}) do
-                | Priority &nbsp;
-                i.fa.fa-caret-up
-            - else
-              = link_to request.parameters.merge({sort: 'priority', direction: 'desc'}) do
-                | Priority &nbsp;
-                i.fa.fa-caret-down
-
-          - else
-            = link_to 'Priority', request.parameters.except(:direction).merge(sort: 'priority')
-
-        th Description
-
-        - if current_user.translator?
-          th Translate
-          th Review
-
-        - else
-          th Progress
-
-        / Translation/Monitor Button
-        - if current_user.translator? or current_user.monitor?
-          th
-    tbody 
-      - @commits.each do |commit|
-        tr.row_class
-          / Project Status
-          td class=(if commit.loading? then 'commit-loading' else (commit.ready? ? 'commit-ready' : 'commit-translating') end)
-
-          /- if not current_user.translator?
-          /  td =(if commit.loading? then 'Loading' else (commit.ready? ? 'Ready' : 'Translating') end)
-
-          / Project Name
-          td = commit.project.name
-
-          / Commit
-          td = link_to commit.revision_prefix, project_commit_url(commit.project, commit)
-
-          / Project Create Date
-          td.centered = commit.created_at.strftime('%m/%d/%Y')
-
-          / Project Due Date
-          td.due-date class=('centered' if !commit.due_date) = render partial: 'table_due_date', locals: { commit: commit }
-
-          / Project Priority
-          td.centered = render partial: 'table_priority', locals: { commit: commit }
-
-          / Project Description
-          td class=('centered' if !commit.description) = render partial: 'table_description', locals: { commit: commit }
-
-          - if current_user.translator?
-            / Word Translation Count
-            td = "#{number_with_delimiter commit.translations_new(*@locales)}s (#{number_with_delimiter commit.words_new(*@locales)}w)"
-            / Word Review Count
-            td = "#{number_with_delimiter commit.translations_pending(*@locales)}s (#{number_with_delimiter commit.words_pending(*@locales)}w)"
-          - else
-            / Progress
-            - if commit.loading?
-              td Importing (#{pluralize(commit.list_workers.count, 'Job')})
-            - elsif commit.ready?
-              td Ready for Download
-            - else
-              - strings_remaining = commit.translations_pending(*@locales) + commit.translations_new(*@locales)
-              td = "Translating #{pluralize(strings_remaining, 'String')}"
-
-          / Translation/Monitor Button
-          = render partial: 'table_action_button', locals: { commit: commit }
+      = render partial: 'headers'
+    tbody
+      = render partial: 'commit', collection: @commits
 
 .row 
   .pagination-links
