Change commit load time unit to minutes in stats page

--- a/app/views/stats/index.js.coffee.erb
+++ b/app/views/stats/index.js.coffee.erb
@@ -93,7 +93,7 @@ $(window).ready () ->
       "values"  : <%= @num_commits_loaded.to_json %>
     },
     {
-      "key"     : "Average Commit Load Time (in hours)",
+      "key"     : "Average Commit Load Time (in minutes)",
       "values"  : <%= @average_load_time.to_json %>
     }
   ])
