--- a/app/views/issues/update.js.erb
+++ b/app/views/issues/update.js.erb
@@ -14,4 +14,4 @@
 #    limitations under the License.
 %>
 
-$('#issues #issue-wrapper-<%= issue.id %>').replaceWith('<%=j render partial: 'show_wrapper', locals: {project: project, key: key, translation: translation, issue: issue} %>');
+$('#issues #issue-wrapper-<%= issue.id %>').replaceWith('<%=j render partial: 'issues/show_wrapper', locals: local_assigns %>');
